--- a/backend/composer.json
+++ b/backend/composer.json
@@ -35,6 +35,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
+        "reliese/laravel": "^1.3",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
